--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,13 @@
     </build>
 
     <distributionManagement>
+        <snapshotRepository>
+            <id>siams-snapshots-deploy</id>
+            <url>http://maven.siams.com/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
         <repository>
-            <id>simagis-open-releases</id>
-            <url>https://simagis.artifactoryonline.com/simagis/open-releases-local</url>
+            <id>siams-deploy</id>
+            <url>http://maven.siams.com/nexus/content/repositories/releases/</url>
         </repository>
     </distributionManagement>
  </project>
